--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "axios": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-phone-input-2": "^2.15.1",
+    "react-phone-number-input": "^3.2.16",
     "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6"
   },
