added: payment, redux for user data, hello user page

--- a/package.json
+++ b/package.json
@@ -9,11 +9,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "^1.9.2",
     "axios": "^1.2.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-easy-crop": "^4.6.3",
     "react-phone-number-input": "^3.2.16",
+    "react-redux": "^8.0.5",
     "react-router-dom": "^6.8.0",
     "styled-components": "^5.3.6"
   },
